--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   datasource:
-    jdbc-url: jdbc:postgresql://localhost:5432/nbastats
-    username: postgres
-    password: password
+    jdbc-url: jdbc:postgresql://localhost:5432/[database_name]
+    username: [postgres]
+    password: [password]
     pool-size: 30
